@@ -4,6 +4,7 @@
 
 === 1.0.22 ===
 * Added maximum tracking option.
+* Updated build scripts and dependencies.
 
 === 1.0.21 ===
 * Updated build scripts and dependencies.
